<package format="3">
  <name>mc_rosgraph_manipulator</name>
  <version>0.0.1</version>
  <description>ROSgraph manipulator</description>
  <author email="m.a.garzonoviedo@tudelft.nl">Mario Garzon</author>
  <author email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>
  <maintainer email="m.a.garzonoviedo@tudelft.nl">Mario Garzon</maintainer>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>metacontrol_msgs</exec_depend>

</package>

